2000-01-30  Soren Sandmann Pedersen  <sandmann@nerva.daimi.au.dk>

	* src/inetaddr.c: Use HP-UX' gethostbyaddr_r.  Fixed typo
	    in Solaris code (this was a bug - we were calling
	    gethostbyname_r, not gethostbyaddr_r) [DAH].
	
Sat Jan 29 16:55:41 2000  David A Helder  <dhelder@umich.edu>

	* AUTHORS: Added Soeren Sandmann to AUTHORS

2000-01-29  Soren Sandmann Pedersen  <sandmann@saratoga.daimi.au.dk>

	* src/inetaddr.c: Use HP-UX' gethostbyname_r
	* acconfig.h: add GETHOSTBYNAME_R_HPUX
	* configure.in: detect HP-UX' gethostbyname_r

Wed Jan 26 12:37:51 2000  David A Helder  <dhelder@umich.edu>

	* AUTHORS: Fixed Xavier's email address.

Wed Jan 26 11:11:07 2000  David A Helder  <dhelder@umich.edu>

	* src/Makefile.am: Don't install gnet-private.h, ftp.{hc}
	* src/{gnet,inetaddr}.h: Removed include of config.h
	* src/gnet-private.h: Added include of config.h

Tue Jan 25 14:48:11 2000  David A Helder  <dhelder@umich.edu>

	* doc/Makefile.am (scan): Added src/ftp, src/gnet-private to
	    the ignore list
	* doc/[docs]: Regenerated

Tue Jan 25 12:28:52 2000  David A Helder  <dhelder@umich.edu>

	* auto*: Upped version to 0.1.7
	* src/gnet.c:
	    Fixed read/write functions.  Basically brought in line with
	    Steven's code, which I know to be correct.  readn didn't
	    handle EOF properly.
	* src/tcp.c (gnet_tcp_socket_server_accept): Use select
	    so we don't suck up all the CPU time (duh).
	* examples/echoclient.c (main): Write the strlen of the
	    line, not strlen + 1.
	* examples/echoserver.c, hfetch.c: Unref the iochannel after
	    closing it.
	
Tue Jan 25 12:01:33 2000  David A Helder  <dhelder@umich.edu>

	* README: Clean-ups
	* src/inetaddr.c: Changed snprintf to g_snprintf.
	
Sun Jan 23 14:05:42 2000  David A Helder  <dhelder@umich.edu>

	* auto*: Upped version to 0.1.6
	* src/*.h: Added #ifdef __cplusplus...
	* src/gnet.h, gnet-private.h: Added #ifndef _GNET_H, 
	   _GNET_PRIVATE_H
	* TODO, other docs: Reformating, cleanups
